# spotify-rust

./: .gitignore  API.md  ARCHITECTURE.md  AUTH_FIXES_REPORT.md  CHANGELOG.md  CLI_IMPLEMENTATION.md  Cargo.toml  INTEGRATION_TESTS.md  LICENSE  README.md
src/: auth.rs  cli.rs  command.rs  key.rs  log_layer.rs  main.rs  media_control.rs  playlist_folders.rs  streaming.rs  token.rs  utils.rs
src/cli/: mod.rs
src/client/: handlers.rs  mod.rs  request.rs  spotify.rs
src/config/: keymap.rs  mod.rs  theme.rs
src/gui/: command_palette.rs  context_menu.rs  image_cache.rs  mod.rs  playback_bar.rs  sidebar.rs  theme.rs  views.rs
src/state/: constant.rs  data.rs  mod.rs  model.rs  player.rs  queue.rs
src/state/ui/: mod.rs  page.rs  popup.rs
src/ui/: mod.rs  single_line_input.rs  utils.rs
