[package]
name = "spotify-player-gui"
version = "0.1.0"
edition = "2021"
description = "A native macOS Spotify player with a dark GUI, built in Rust"
license = "MIT"

[features]
default = ["notify", "media-control", "streaming"]
notify = ["notify-rust"]
media-control = ["souvlaki"]
streaming = ["dep:librespot-playback", "dep:librespot-connect"]
image = []
pixelate = ["image"]
fzf = ["fuzzy-matcher"]

[dependencies]
anyhow = "1.0.102"
config_parser2 = "0.1.7"
dirs-next = "2.0.0"
librespot-connect = { version = "0.8.0", optional = true }
librespot-core = { version = "0.8.0" }
librespot-oauth = { version = "0.8.0" }
librespot-playback = { version = "0.8.0", optional = true, default-features = false, features = ["rodio-backend"] }
librespot-metadata = { version = "0.8.0" }
log = "0.4.29"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rspotify = { version = "0.15.3", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
toml = "1.1.0"
rand = "0.10.0"
maybe-async = "0.2.10"
async-trait = "0.1.89"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
backtrace = "0.3.76"
flume = "0.12.0"
serde_json = "1.0.149"
regex = "1.12.3"
ttl_cache = "0.5.1"
html-escape = "0.2.13"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
futures = "0.3.32"
fs2 = "0.4"
fuzzy-matcher = { version = "0.3.7", optional = true }

image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Notifications
notify-rust = { version = "4.12.0", optional = true, default-features = false, features = ["d"] }

# Media control (MPRIS on Linux, native on macOS/Windows)
souvlaki = { version = "0.8.3", optional = true }

# GUI
eframe = { version = "0.31", features = ["default", "glow"] }
egui = "0.31"
lru = "0.12"
